syntax = "proto3";
option swift_prefix="Proto";


message OperationID {
    int64 lamport = 1;
    bytes peerID = 2; //UUID to 16 bytes
}
//TODO: later optimise representation to e.g. 2 x int64


message BaseOperation {
    int32 version = 1;
    OperationID id = 2;
    OperationID parentID = 3;
    OperationID attributeID = 4; // TODO: it's not always needed so maybe handcraft the objects
}

message ObjectOperation {
    BaseOperation base = 1;
    int32 rawType = 2;
}

message AttributeOperation {
    BaseOperation base = 1;
    string name = 2;
    int32 rawType = 3;
}

message DeleteOperation {
    BaseOperation base = 1;
}

message LWWOperation {
    BaseOperation base = 1;
    oneof value {
        int64 int = 2;
        float float = 3;
        double date = 4;
        bool boolean = 5;
        string string = 6;
    }
}

message StringInsertOperation {
    BaseOperation base = 1;
    string contribution = 2;
}

message OperationsBundle {
    int32 version = 1;
    bytes peerID = 2; //UUID to 16 bytes
    repeated ObjectOperation objectOperations = 3;
    repeated AttributeOperation attributeOperations = 4;
    repeated DeleteOperation deleteOperations = 5;
    repeated LWWOperation lwwOperations = 6;
    repeated StringInsertOperation stringInsertOperations = 7;
}
